// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab /> Snapshot tests renders correctly active tab 1`] = `
<li
  aria-disabled={false}
  aria-selected={true}
  className="tab--wrapper active"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  />
</li>
`;

exports[`<Tab /> Snapshot tests renders correctly disabled tab 1`] = `
<li
  aria-disabled={true}
  aria-selected={false}
  className="tab--wrapper disabled"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  />
</li>
`;

exports[`<Tab /> Snapshot tests renders correctly focus and active tab 1`] = `
<li
  aria-disabled={false}
  aria-selected={true}
  className="tab--wrapper active focus"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  />
</li>
`;

exports[`<Tab /> Snapshot tests renders correctly focus tab 1`] = `
<li
  aria-disabled={false}
  aria-selected={false}
  className="tab--wrapper focus"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  />
</li>
`;

exports[`<Tab /> Snapshot tests renders correctly with empty props 1`] = `
<li
  aria-disabled={false}
  aria-selected={false}
  className="tab--wrapper"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  />
</li>
`;
